python/testData/quickFixes/PyAddImportQuickFixTest/orderingPathComponentsNumber/main.py
<error descr="Unresolved reference 'foo'">fo<caret>o</error>